Project ShareIt {
  database_type: 'PostgreSQL'
  Note: 'Entity Relationship diagram for ShareIt'
}

Table users {
  id integer [pk, increment]
  name varchar(255) [not null]
  email varchar(512) [not null, unique]
  created_at timestamp [not null]
}

Table items {
  id integer [pk, increment]
  name varchar(255) [not null]
  description varchar
  is_available boolean [not null]
  owner_id integer [ref: > users.id, not null]
  request_id integer [ref: - requests.id]
  created_at timestamp [not null]
}

Table bookings {
  id integer [pk, increment]
  start_date timestamp [not null]
  end_date timestamp [not null]
  item_id integer [ref: > items.id, not null]
  booker_id integer [ref: > users.id, not null]
  status enum [not null] // WAITING, APPROVED, REJECTED, CANCELED
  created_at timestamp [not null]
}

Table requests {
  id integer [pk, increment]
  description varchar
  requester_id integer [ref: > users.id, not null]
  created_at timestamp [not null]
}

Table comments {
  id integer [pk, increment]
  text varchar [not null]
  item_id integer [ref: > items.id, not null]
  author_id integer [ref: > users.id, not null]
  created_at timestamp [not null]
}
